--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     }
   },
   "dependencies": {
-    "electron-packager": "^13.1.1"
+    "electron-packager": "^13.1.1",
+    "http-server": "^0.11.1"
   }
 }
